force-app/main/default/objects/Quote/fields/Amortization__c.field-meta.xml
<CustomField>
    <fullName>Amortization__c</fullName>
    <description>Amortization Term from the Deal Record.</description>
    <inlineHelpText>Amortization Term from the Deal Record.</inlineHelpText>
    <label>Amortization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 months</fullName>
                <default>true</default>
                <label>0 months</label>
            </value>
            <value>
                <fullName>120 months</fullName>
            </value>
            <value>
                <fullName>180 months</fullName>
            </value>
            <value>
                <fullName>240 months</fullName>
            </value>
            <value>
                <fullName>300 months</fullName>
            </value>
            <value>
                <fullName>360 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>