force-app/main/default/objects/Quote/fields/Appraisals__c.field-meta.xml
<CustomField>
    <fullName>Appraisals__c</fullName>
    <description>Deposit -Broker Price Opinions/Appraisal from the Deal Record.</description>
    <inlineHelpText>Deposit -Broker Price Opinions/Appraisal from the Deal Record.</inlineHelpText>
    <label>Appraisals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>