force-app/main/default/objects/Quote/fields/CAF_Originator_Name__c.field-meta.xml
<CustomField>
    <fullName>CAF_Originator_Name__c</fullName>
    <description>CAF Originator</description>
    <formula>Opportunity.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CAF Originator</inlineHelpText>
    <label>CAF Originator</label>
    <type>Text</type>
</CustomField>