force-app/main/default/objects/Quote/fields/Estimated_Loan_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Loan_Proceeds__c</fullName>
    <description>Optional for RM/Analyst.</description>
    <inlineHelpText>Optional for RM/Analyst.</inlineHelpText>
    <label>Estimated Loan Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>