force-app/main/default/objects/Quote/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Indicative Rate from the Deal Record.</description>
    <inlineHelpText>Indicative Rate from the Deal Record.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>