force-app/main/default/objects/Quote/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <description>Deposit - Legal Counsel, Diligence from the Deal Record.</description>
    <inlineHelpText>Deposit - Legal Counsel, Diligence from the Deal Record.</inlineHelpText>
    <label>Legal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>