force-app/main/default/objects/Quote/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Initially, this field will pull from the Deal Record. User may modify as needed on the Quote.</description>
    <inlineHelpText>Initially, this field will pull from the Deal Record. User may modify as needed on the Quote.</inlineHelpText>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>