force-app/main/default/objects/Quote/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <description>Max LTV % from the Deal Record.</description>
    <inlineHelpText>Max LTV % from the Deal Record.</inlineHelpText>
    <label>LTV</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>