force-app/main/default/objects/Quote/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <description>Origination Fee % from the Deal Record.</description>
    <inlineHelpText>Origination Fee % from the Deal Record.</inlineHelpText>
    <label>Origination Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>