force-app/main/default/objects/Quote/fields/Originator_Email__c.field-meta.xml
<CustomField>
    <fullName>Originator_Email__c</fullName>
    <description>CAF Originator Email</description>
    <formula>Opportunity.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CAF Originator Email</inlineHelpText>
    <label>CAF Originator Email</label>
    <type>Text</type>
</CustomField>