force-app/main/default/objects/Quote/fields/Originator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Originator_Phone__c</fullName>
    <description>CAF Originator Phone Number</description>
    <formula>Opportunity.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CAF Originator Phone Number</inlineHelpText>
    <label>CAF Originator Phone Number</label>
    <type>Text</type>
</CustomField>