force-app/main/default/objects/Quote/fields/Prepayment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Penalty__c</fullName>
    <description>YM / Prepayment Penalty from the Deal Record.</description>
    <inlineHelpText>YM / Prepayment Penalty from the Deal Record.</inlineHelpText>
    <label>Prepayment Penalty</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>54 Months</fullName>
            </value>
            <value>
                <fullName>78 Months</fullName>
            </value>
            <value>
                <fullName>84 Months</fullName>
            </value>
            <value>
                <fullName>114 Months</fullName>
            </value>
            <value>
                <fullName>Step Down (5,4,3,2,1)</fullName>
            </value>
            <value>
                <fullName>Step Down (5,5,5,4,3,2,1)</fullName>
            </value>
            <value>
                <fullName>Step Down (7,6,5,4,3,2,1)</fullName>
            </value>
            <value>
                <fullName>Step Down (5,5,5,5,5,5,4,3,2,1)</fullName>
            </value>
            <value>
                <fullName>Step Down (10,9,8,7,6,5,4,3,2,1)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>