force-app/main/default/objects/Quote/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Loan Purpose from the Deal Record.</description>
    <inlineHelpText>Loan Purpose from the Deal Record.</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Refinance/Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>