force-app/main/default/objects/Quote/fields/Quote_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quote_Notes__c</fullName>
    <description>Manual Input. Please enter Notes that the Client will see in the Soft Quote.</description>
    <inlineHelpText>Manual Input. Please enter Notes that the Client will see in the Soft Quote.</inlineHelpText>
    <label>Quote Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>