force-app/main/default/objects/Quote/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <description>Recourse from the Deal Record.</description>
    <inlineHelpText>Recourse from the Deal Record.</inlineHelpText>
    <label>Recourse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recourse</fullName>
            </value>
            <value>
                <fullName>Non-Recourse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>