force-app/main/default/objects/Quote/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Term Loan Type from the Deal Record.</description>
    <inlineHelpText>Term Loan Type from the Deal Record.</inlineHelpText>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>