force-app/main/default/objects/Quote/fields/X3rd_Party_Diligence__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Diligence__c</fullName>
    <description>Deposit - Lender Diligence from the Deal Record.</description>
    <inlineHelpText>Deposit - Lender Diligence from the Deal Record.</inlineHelpText>
    <label>3rd Party Diligence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>