force-app/main/default/objects/Quote/recordTypes/ActiveQuote.recordType-meta.xml
<RecordType>
    <fullName>ActiveQuote</fullName>
    <active>true</active>
    <description>Hidden from Profiles for the purpose of the NewQuote field restriction on the Edit Page.</description>
    <label>ActiveQuote</label>
</RecordType>