force-app/main/default/objects/Quote/recordTypes/NewQuote.recordType-meta.xml
<RecordType>
    <fullName>NewQuote</fullName>
    <active>true</active>
    <description>Used to only Show Initial Input Fields</description>
    <label>Enter Values</label>
</RecordType>